docs: Add v2.5.0 release notes to CHANGELOG
- Document Maven Central publishing support
- Note RenderMachine architecture redesign (sealed -> abstract)
- List Java 25 preview features enabled (records, pattern matching, virtual threads)
- Detail metadata caching optimizations
- Specify breaking changes clearly
- Update dependency version changes
- Confirm 325+ test coverage passing

https://claude.ai/code/session_01E3XN5TfhJre7yGV8PqgVN4